<resources>
    <string name="quanyan_app_name">鹰和鹰</string>
    <string name="app_name">yhy</string>
    <string name="label_title_bar_back">返回</string>
    <string name="label_title_bar_cancel">取消</string>
    <string name="sm_title_bar_close_btn">关闭</string>
    <string name="error_net_msg_text">请检查网络后重新尝试</string>
    <string name="error_reload">重新加载</string>
    <string name="error_recheck">重新检查</string>
    <string name="error_reload_textview">数据读取异常,点击重新加载</string>
    <string name="error_recheck_textview">网络异常,请稍后再试</string>
    <string name="error_network_retry">您的网络异常,请检查网络后重新尝试</string>
    <string name="error_recheck_textview_no_network">网络不可用,请检查</string>
    <string name="error_label_popup_dqyc">数据去读异常,点击异常</string>
    <string name="error_label_popup_wlyc">网络异常,请检查</string>
    <string name="error_label_popup_zwsj">暂无内容\n去别的地方看看吧</string>
    <string name="error_label_error_app_crash">亲,健康管家有点累,小憩一下,点击按钮重新启动一下吧！</string>
    <string name="error_label_app_reboot">重新启动</string>
    <string name="error_label_app_exit">退出应用</string>
    <string name="error_toast_reach_max_length">亲,说的话有点多啊,说多了费口水,还是减点啊！</string>
    <string name="sm_error_type_top">网络异常,请检查你的网络设置</string>
    <string name="sm_error_type_net">网络不稳定</string>
    <string name="sm_error_type_empty">加载数据失败</string>
    <string name="sm_error_type_res">加载资源失败</string>
    <string name="label_crash_name">帮助改善用户体验</string>
    <string name="hint_crash"> %1$s(%2$s)工作太辛苦，暂时昏厥过去了，请把%3$s昏厥的病因用邮件发给我们，我们会尽快修复，让%4$s继续为您服务!\n\n</string>
    <string name="error_params">参数错误：-1</string>
    <string name="error_return_data">数据读取异常</string>
    <string name="error_data_exception">数据异常</string>
    <string name="no_telephone_number">暂无电话</string>
    <string name="error_submit_order">订单提交失败</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="no_more">没有更多内容了哦</string>
    <string name="all_photo">所有图片</string>
    <string name="all_video">所有视频</string>
    <string name="all_pic_vi">所有图片/视频</string>
    <string name="select_bucket">select bucket</string>
    <string name="select_num">selected photo %d </string>
    <string name="select_ok">select ok</string>
    <string name="sdcard_unavailable">当前SD卡不可用，请重新插上SD卡后再试</string>
    <string name="local_error_network_access_failed">网络异常,请稍后再试</string>
    <string name="network_unavailable">网络不可用，请检查</string>
    <string name="device_token_missing">应用初始化失败，请重新启动应用</string>
    <string name="login_first">亲，你还没有登录哦，请先登录！</string>
    <string name="connection_time_out">网络异常，请稍后再试</string>
    <string name="picture_upload_failed">图片上传失败,请稍后再试</string>
    <string name="saving_image">正在保存</string>
    <string name="preparing_card">SD卡无效</string>
    <string name="no_storage_card">无SD卡</string>
    <string name="not_enough_space">SD卡没有足够的空间</string>
    <string name="del_photo">删除</string>
    <string name="select_from_gallery">相册</string>
    <string name="take_photo">拍照</string>
    <string name="delete_photo">删除图片</string>
    <string name="replace_photo">替换图片</string>
    <string name="take_video">小视频</string>
    <string name="take_video_draft">小视频草稿箱</string>
    <string name="affirm">确认</string>
    <string name="cancel">取消</string>
    <string name="reload_photo">重新上传</string>
    <string name="btn_send">发送</string>
    <string name="reload">重新加载</string>
    <string name="tab_main_page_name">主场</string>
    <string name="tab_venue_page_name">订场</string>
    <string name="tab_club_name">俱乐部</string>
    <string name="tab_master_name">咨询师</string>
    <string name="tab_arround_name">活动</string>
    <string name="tab_discover_name">圈子</string>
    <string name="tab_trip_name">行程</string>
    <string name="tab_sport_name">运动</string>
    <string name="tab_personal_center_name">我的</string>
    <string name="back_twice_exit">再点一次退出应用</string>
    <string name="dlg_msg_app_check_update">检测更新中&#8230;</string>
    <string name="toast_no_update">亲,您现在已经是最新版本了！</string>
    <string name="dlg_btn_cancel">取消</string>
    <string name="dlg_btn_update">更新</string>
    <string name="current_version">当前版本</string>
    <string name="last_version">最新版本</string>
    <string name="update">更新</string>
    <string name="version_update">版本更新</string>
    <string name="update_desc">发现新版本,是否现在升级？</string>
    <string name="update_now">马上升级</string>
    <string name="update_next_time">下次再说</string>
    <string name="force_update">立即升级</string>
    <string name="dlg_title_hint">提示</string>
    <string name="dlg_title_upgrade">升级提示</string>
    <string name="dlg_btn_exit">退出</string>
    <string name="dlg_btn_active_now">立即激活</string>
    <string name="dlg_btn_active_no">暂不激活</string>
    <string name="weixin_not_installed">亲，请检查一下你的手机是否安装了微信!</string>
    <string name="toast_share_cancel">取消分享</string>
    <string name="toast_share_success">分享成功</string>
    <string name="toast_share_weibo_success">发送成功</string>
    <string name="toast_share_fail">分享失败</string>
    <string name="dlg_sns_btn_label_sina">新浪微博</string>
    <string name="dlg_sns_btn_label_wechat">微信好友</string>
    <string name="label_share_title_handel">转赠</string>
    <string name="dlg_sns_btn_label_sms">短信</string>
    <string name="dlg_sns_btn_label_wxcircle">朋友圈</string>
    <string name="dlg_sns_btn_label_qq">QQ</string>
    <string name="dlg_sns_btn_label_jkq">健康圈</string>
    <string name="btn_cancel">取消</string>
    <string name="label_btn_back">返回</string>
    <string name="label_btn_cancel">取消</string>
    <string name="label_btn_ok">确定</string>
    <string name="continue_live">继续直播</string>
    <string name="label_btn_clear">清除</string>
    <string name="label_btn_finish">完成</string>
    <string name="label_btn_add">新增</string>
    <string name="label_confirm_order">是否确认收货？</string>
    <string name="save">保存</string>
    <string name="change_password_success">密码修改成功</string>
    <string name="register_bottom_hint">注册表示您已经同意服务条款</string>
    <string name="register_bottom_before">注册表示您已经同意</string>
    <string name="register_agree_hint">服务条款</string>
    <string name="hint_input_phone_number">请输入您的手机号</string>
    <string name="hint_please_input_nickname">请输入您的昵称</string>
    <string name="hint_nickname">设置2-15位昵称</string>
    <string name="hint_your_phone">输入手机号</string>
    <string name="hint_your_password">输入密码</string>
    <string name="hint_input_dynamic_code">输入验证码</string>
    <string name="hint_input_password">密码</string>
    <string name="hint_set_password">输入长度不足,请输入6-16位密码</string>
    <string name="hint_set_new_password">设置新密码</string>
    <string name="input_new_password">输入6-16位字母、数字密码</string>
    <string name="hint_input_new_password">请输入新密码</string>
    <string name="hint_input_old_password">请输入原密码</string>
    <string name="hint_confirm_new_password">确认新密码</string>
    <string name="hint_input_nickname">请输入2~15位昵称</string>
    <string name="new_password">新密码</string>
    <string name="validate_re_send">(%ds)重新获取</string>
    <string name="label_input_new_pwd">请设定六位数字密码,以便使用手机号和该密码登录.</string>
    <string name="get_code">重新获取</string>
    <string name="req_dynamic_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="fast_register">立即注册</string>
    <string name="login_by_request_code">一键登录</string>
    <string name="login_by_request_dynamic_code">登录</string>
    <string name="login_by_password">验证码登录</string>
    <string name="reset_password">找回密码</string>
    <string name="reset_password_success">成功重置密码</string>
    <string name="login_phone">手机登入</string>
    <string name="login_third">选择其他方式登录: </string>
    <string name="login_weixin">微信登录</string>
    <string name="login_third_string">第三方登录</string>
    <string name="login_sms">账号注册</string>
    <string name="login_yizhangtong">一账通登录</string>
    <string name="login_qq">QQ</string>
    <string name="login_weibo">微博登录</string>
    <string name="login_trouble">登录不了?</string>
    <string name="login_other_way">其他方式登录</string>
    <string name="login_msg">用短信密码登录</string>
    <string name="login_failmsg">您的账号或密码输入错误，请重新输入</string>
    <string name="password_error_retry">请输入6~16位的密码，需同时包含数字及字母</string>
    <string name="pwd_get">找回密码</string>
    <string name="pwd_set">设置密码</string>
    <string name="pwd_find_message">密码忘了？别担心,输入您的手机号,我们会为您立即找回!</string>
    <string name="get_validate_fail">获取验证码失败</string>
    <string name="leave_message">您真的要离开此页面吗?</string>
    <string name="look_first">窥视一番</string>
    <string name="register">注册</string>
    <string name="label_btn_go_main">立即体验</string>
    <string name="register_success">注册成功</string>
    <string name="toast_bind_mobile_ok">绑定成功</string>
    <string name="have_account">已有账号</string>
    <string name="ensure_phone_number">确认手机号码</string>
    <string name="ensure_phone_number_info">我们将发送验证短信到如下号码:\n%s</string>
    <string name="phone_number_error">您输入的是一个错误的手机号码  </string>
    <string name="phone_number_null">请输入手机号码  </string>
    <string name="phone_number_error_title">请输入正确的手机号码</string>
    <string name="verify_code_null">请输入验证码</string>
    <string name="please_input_pwd">请设置您的密码</string>
    <string name="please_hint_input_pwd">设置6-16位字母、数字密码</string>
    <string name="please_reset_pwd">请设置您的新密码</string>
    <string name="input_verify_code">输入短信验证码</string>
    <string name="cannt_get_code">收不到验证码？</string>
    <string name="cannt_get_code_2">主动短信验证</string>
    <string name="vefity_code_timer">%d秒后可重发</string>
    <string name="commit">提交</string>
    <string name="verify_code_has_send">短信验证码已经发送到如下号码：</string>
    <string name="verify_code_has_send_string">验证码已发送,注意查看短信</string>
    <string name="pwd_not_same">两次输入的密码不一致</string>
    <string name="pwd_number_not_enough">密码位数不足6位</string>
    <string name="input_phone_number_title">输入手机号</string>
    <string name="next_step">下一步</string>
    <string name="safe_question_verify">安全验证</string>
    <string name="verify_code_error">验证码错误，请重新输入</string>
    <string name="safe_question_answer_error">您的回答有误</string>
    <string name="old_password">原密码</string>
    <string name="hint">提示</string>
    <string name="no_receive_msg">收不到验证码</string>
    <string name="no_receive_msg_content">检测长时间没有收到验证码,您也可以向服务器发送一条短信完成验证。短信资费0.1元,由运营商收取</string>
    <string name="user_center_send_msg">发送短信</string>
    <string name="already_register">该手机号码已被注册,是否直接登录？</string>
    <string name="has_no_register">该手机号码未注册,是否直接注册？</string>
    <string name="login_now">直接登录</string>
    <string name="register_now">直接注册</string>
    <string name="no_evaluate">未评测</string>
    <string name="login_recommend">保护数据安全！登录后上传信息到云端,无需担心数据丢失。</string>
    <string name="last_question">上一题</string>
    <string name="next_question">下一题</string>
    <string name="only_login_user_can_add_person">登录后,才能添加家人哦</string>
    <string name="no_safety_question">没有安全问题</string>
    <string name="get_safety_question_fail">获取安全问题失败</string>
    <string name="cannot_add_person">无法添加家庭成员</string>
    <string name="order_list_total_price">合计 :</string>
    <string name="order_list_count">x</string>
    <string name="cancel_order">取消订单</string>
    <string name="pay_now">立即付款</string>
    <string name="confirm_receipt">确认收货</string>
    <string name="look_logistical">查看物流</string>
    <string name="load_again">重新加载</string>
    <string name="error_view_nodata_content">去看看其他小伙伴的空间吧</string>
    <string name="error_view_nodata_title">小主很懒什么都没有留下</string>
    <string name="order_comment">去评价</string>
    <string name="want_consult_content">想咨询的内容</string>
    <string name="descrption_of_consulting">咨询需求描述</string>
    <string name="hint_descrption_of_consulting">输入其他您想咨询的内容</string>
    <string name="must_choose">必选</string>
    <string name="selectable">可选</string>
    <string name="quick_consult">快速咨询</string>
    <string name="hint_input_consult_other">请输入您想咨询的关键词，至多10字</string>
    <string name="standard_live">标清直播</string>
    <string name="hd_live">高清直播</string>
    <string name="super_hd_live">超清直播</string>
</resources>