<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/btn_reload_photo"
            style="@style/btn_pop_style"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/btn_pop_default"
            android:text="@string/reload_photo" />

        <TextView
            android:id="@+id/btn_del_photo"
            style="@style/btn_pop_style"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/btn_pop_delete"
            android:gravity="center"
            android:text="@string/del_photo" />

        <TextView
            android:id="@+id/btn_take_photo"
            style="@style/btn_pop_style"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/btn_pop_default"
            android:text="@string/take_photo" />

        <TextView
            android:id="@+id/btn_pick_photo"
            style="@style/btn_pop_style"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/btn_pop_default"
            android:text="@string/select_from_gallery" />

        <TextView
            android:id="@+id/btn_cancel"
            style="@style/btn_pop_style"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/btn_pop_cancel"
            android:text="@string/cancel"
            android:textColor="#b8c5cc" />
    </LinearLayout>

</RelativeLayout>