<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/margin_50dp"
    android:background="@android:color/white"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dd_dimen_20px"
        android:paddingLeft="@dimen/dd_dimen_30px"
        android:paddingTop="@dimen/dd_dimen_20px">


        <TextView
            android:id="@+id/tv_order_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dd_dimen_10px"
            android:text="@string/order_list_count"
            android:textColor="@color/neu_999999"
            android:textSize="@dimen/dd_dimen_24px"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_order_count_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dd_dimen_20px"
            android:text="3"
            android:textColor="@color/neu_999999"
            android:textSize="@dimen/dd_dimen_24px"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_order_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dd_dimen_10px"
            android:text="@string/order_list_total_price"
            android:textColor="@color/neu_999999"
            android:textSize="@dimen/dd_dimen_24px"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_order_total_price_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main"
            android:textSize="@dimen/dd_dimen_24px"
            android:visibility="gone" />


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="@dimen/dd_dimen_140px"
            android:layout_height="@dimen/dd_dimen_54px"
            android:layout_marginRight="@dimen/dd_dimen_30px"
            android:background="@drawable/shape_button_d9d9d9_unclick"
            android:gravity="center"
            android:text="@string/cancel_order"
            android:textColor="@color/neu_999999"
            android:textSize="@dimen/dd_dimen_24px" />
        <TextView
            android:id="@+id/tv_logistical"
            android:layout_width="@dimen/dd_dimen_140px"
            android:layout_height="@dimen/dd_dimen_54px"
            android:layout_marginRight="@dimen/dd_dimen_30px"
            android:background="@drawable/shape_more_item_ability_bg"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/look_logistical"
            android:textColor="@color/main"
            android:textSize="@dimen/dd_dimen_24px" />
        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="@dimen/dd_dimen_140px"
            android:layout_height="@dimen/dd_dimen_54px"
            android:layout_marginRight="@dimen/dd_dimen_30px"
            android:background="@drawable/shape_more_item_ability_bg"
            android:gravity="center"
            android:text="@string/confirm_receipt"
            android:textColor="@color/main"
            android:textSize="@dimen/dd_dimen_24px" />

        <TextView
            android:id="@+id/tv_pay"
            android:layout_width="@dimen/dd_dimen_140px"
            android:layout_height="@dimen/dd_dimen_54px"
            android:layout_marginRight="@dimen/dd_dimen_30px"
            android:background="@drawable/shape_more_item_ability_bg"
            android:gravity="center"
            android:text="@string/pay_now"
            android:textColor="@color/main"
            android:textSize="@dimen/dd_dimen_24px" />

        <TextView
            android:id="@+id/tv_comments"
            android:layout_width="@dimen/dd_dimen_140px"
            android:layout_height="@dimen/dd_dimen_54px"
            android:layout_marginRight="@dimen/dd_dimen_30px"
            android:background="@drawable/shape_more_item_ability_bg"
            android:gravity="center"
            android:text="@string/order_comment"
            android:textColor="@color/main"
            android:textSize="@dimen/dd_dimen_24px" />

    </LinearLayout>


</LinearLayout>