<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/neu_f4f4f4"
                android:padding="@dimen/dd_dimen_30px"
                android:text="@string/must_choose"
                android:textSize="@dimen/dd_dimen_32px"
                android:textColor="@color/neu_333333" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dd_dimen_30px"
                android:paddingRight="@dimen/dd_dimen_30px"
                android:paddingTop="@dimen/dd_dimen_30px"
                android:textSize="@dimen/dd_dimen_30px"
                android:text="@string/want_consult_content"
                android:textColor="@color/neu_333333" />

            <com.quanyan.yhy.view.LabelLayout
                android:id="@+id/layout_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dd_dimen_20px" />

            <EditText
                android:id="@+id/et_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dd_dimen_30px"
                android:background="@drawable/feedback_stroke_bg"
                android:hint="@string/hint_input_consult_other"
                android:maxLength="10"
                android:padding="@dimen/dd_dimen_10px"
                android:singleLine="true"
                android:textColor="@color/neu_666666"
                android:textColorHint="@color/neu_999999"
                android:textSize="@dimen/dd_dimen_24px"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/neu_f4f4f4"
                android:padding="@dimen/dd_dimen_30px"
                android:text="@string/selectable"
                android:textSize="@dimen/dd_dimen_32px"
                android:textColor="@color/neu_333333" />

            <com.quanyan.yhy.ui.views.AppSettingItem
                android:id="@+id/destination"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dd_dimen_30px">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descrption_of_consulting"
                    android:textColor="@color/neu_333333"
                    android:textSize="@dimen/dd_dimen_30px" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dd_dimen_220px"
                    android:layout_marginTop="@dimen/dd_dimen_30px"
                    android:background="@drawable/feedback_stroke_bg"
                    android:padding="@dimen/dd_dimen_15px">

                    <EditText
                        android:id="@+id/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dd_dimen_150px"
                        android:background="@color/white"
                        android:gravity="start"
                        android:hint="@string/hint_descrption_of_consulting"
                        android:maxLength="200"
                        android:minHeight="@dimen/dd_dimen_200px"
                        android:textColor="@color/neu_666666"
                        android:textColorHint="@color/neu_999999"
                        android:textSize="@dimen/dd_dimen_28px" />

                    <TextView
                        android:id="@+id/number_words"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:background="@color/white"
                        android:text="0/200"
                        android:textColor="@color/tv_color_grayBD"
                        android:textSize="@dimen/dd_dimen_28px" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/neu_cccccc"
        android:gravity="center"
        android:padding="@dimen/dd_dimen_24px"
        android:text="@string/quick_consult"
        android:textColor="@color/neu_666666"
        android:textSize="17sp"
        android:visibility="visible" />
</LinearLayout>